# product-agent

./: .gitignore  Dockerfile  README.md  app.py  constants.py  filters.py  home24.html  main.py  playground.ipynb  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/: ai.py  constants.py  extractions.py  floors.py  models.py
notebooks/: clean_queries.ipynb  playground.ipynb
